Card Maker Version History
--------------------------
1.4.0.0
- Changed FormattedText Auto-Scale functionality
- Added alternative approach to measure strings for FormattedText (Old/Default: CharacterRanges vs. New:MeasureStringGenericTypoGraphic)
- Added in-memory caching when exporting sublayouts
- Added cnv (color normalized value) macro for converting colors to normalized values
- Added ability to specify graphic elements as masks
- Added ability to toggle graphic settings
- Added ability to specify color matrix
- Added tracking of tree node collapse state to each project.
- Added ability to control the card count via define values (and only define values)
- Added ![exporting] ![exportformat] ![parentlayout] ![rootlayout] card values (see manual)
- Fixed ![deckindex] and ![cardindex] (they were swapped)
- Fixed rare/intermittent issue with reference reads
- Added preliminary SubLayout element functionality [needs even more documentation]
- Adjusted Image Cache to track last updated times on files
- Added WebP image support (import/export & Windows only) via SkiaSharp (https://github.com/mono/SkiaSharp)
- Added card index functionality for image export / pdf export
- Added basic gradient functionality to Text elements (MarkVabulas)
- Added ability to access element fields with &[fieldname]
- Added FormattedText paragraph tag (see manual)
- Added new graphic element type option to draw the graphic at the element origin

1.3.0.0
- Overhaul to Google sheet selection due to security policy changes
- Added detection for main window launch on non-existent screens (will re-position to 0,0)
- Added a number of options for pdf export (combobox) based on context
- Added PDF export support for the export name format (on export you can use it or further customize the output file)
- Added layoutname as another card value
- Added padl and padr to allow for padding of strings
- Added ability to pick colors from the entire screen when using the color selection dialog.